--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ProductListPriceFilterComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ProductListPriceFilterComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by price</span></h5>
 <div class="bg-light p-4 mb-30">
 	<form>
 		<div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
