--- a/Frontends/MShop.WebUI/Views/ProductList/Index.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/Index.cshtml
@@ -3,59 +3,46 @@
 	Layout = "~/Views/UILayout/_UILayout.cshtml";
 }
 
-
-<!-- Breadcrumb Start -->
 <div class="container-fluid">
 	<div class="row px-xl-5">
 		<div class="col-12">
 			<nav class="breadcrumb bg-light mb-30">
-				<a class="breadcrumb-item text-dark" href="#">Home</a>
-				<a class="breadcrumb-item text-dark" href="#">Shop</a>
-				<span class="breadcrumb-item active">Shop List</span>
+				<a class="breadcrumb-item text-dark" href="#">Ana Sayfa</a>
+				<a class="breadcrumb-item text-dark" href="#">Ürünler</a>
+				<span class="breadcrumb-item active">Ürün Listesi</span>
 			</nav>
 		</div>
 	</div>
 </div>
-<!-- Breadcrumb End -->
-<!-- Shop Start -->
+
+
 <div class="container-fluid">
 	<div class="row px-xl-5">
-		<!-- Shop Sidebar Start -->
+		
 		<div class="col-lg-3 col-md-4">
-			<!-- Price Start -->
+			
 			@await Component.InvokeAsync("_ProductListPriceFilterComponentPartial")
 
-			<!-- Price End -->
-			<!-- Color Start -->
+			
 			@await Component.InvokeAsync("_ProductListColorFilterComponentPartial")
 
-			<!-- Color End -->
-			<!-- Size Start -->
+			
 			@await Component.InvokeAsync("_ProductListSizeFilterComponentPartial")
-			<!-- Size End -->
+		
 		</div>
-		<!-- Shop Sidebar End -->
-		<!-- Shop Product Start -->
+		
 		<div class="col-lg-9 col-md-8">
 			<div class="row pb-3">
-				
-					@await Component.InvokeAsync("_ProductListGetProductCountComponentPartial")
 
-				    @await Component.InvokeAsync("_ProductListComponentPartial")
-					
-					<nav>
-						<ul class="pagination justify-content-center">
-							<li class="page-item disabled"><a class="page-link" href="#">Previous</span></a></li>
-							<li class="page-item active"><a class="page-link" href="#">1</a></li>
-							<li class="page-item"><a class="page-link" href="#">2</a></li>
-							<li class="page-item"><a class="page-link" href="#">3</a></li>
-							<li class="page-item"><a class="page-link" href="#">Next</a></li>
-						</ul>
-					</nav>
-				</div>
+				@await Component.InvokeAsync("_ProductListGetProductCountComponentPartial")
+
+				@await Component.InvokeAsync("_ProductListComponentPartial")
+
+				@await Component.InvokeAsync("_ProductListPaginationComponentPartial")
 			</div>
 		</div>
-		<!-- Shop Product End -->
 	</div>
+	
 </div>
-<!-- Shop End -->
+
+
