--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ProductListComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ProductListComponentPartial/Default.cshtml
@@ -12,7 +12,7 @@
 			</div>
 		</div>
 		<div class="text-center py-4">
-			<a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>
+			<a class="h6 text-decoration-none text-truncate" href="">Drone</a>
 			<div class="d-flex align-items-center justify-content-center mt-2">
 				<h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>
 			</div>
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<div class="text-center py-4">
-			<a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>
+			<a class="h6 text-decoration-none text-truncate" href="">Akıllı Saat</a>
 			<div class="d-flex align-items-center justify-content-center mt-2">
 				<h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>
 			</div>
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 		<div class="text-center py-4">
-			<a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>
+			<a class="h6 text-decoration-none text-truncate" href="">Kıyafet</a>
 			<div class="d-flex align-items-center justify-content-center mt-2">
 				<h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>
 			</div>
