--- a/Frontends/MShop.WebUI/Areas/Admin/Views/AdminLayout/Index.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/AdminLayout/Index.cshtml
@@ -9,7 +9,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+  
 </head>
 <body>
+    <h1>deneme</h1>
 </body>
 </html>
+    
