--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -15,6 +15,9 @@
 				<tr>
 					<th scope="col">#</th>
 					<th scope="col">Kategori Adı</th>
+					<th scope="col">Kategoriye Ait Ürünler</th>
+					<th scope="col">Sil</th>
+					<th scope="col">Güncelle</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -24,12 +27,15 @@
 					<tr>
 						<td>@count</td>
 						<td>@item.CategoryName</td>
+						<td><a href="#" class="btn btn-warning">Ürünler</a></td>
+						<td><a href="/Admin/Category/DeleteCategory/@item.CategoryID" class="btn btn-danger">Sil</a></td>
+						<td><a href="/Admin/Category/UpdateCategory/@item.CategoryID" class="btn btn-success">Güncelle</a></td>
 					</tr>
 				}
 
 			</tbody>
 		</table>
-
+		<a href="/Admin/Category/CreateCategory" class="btn btn-info">Kategori Ekle</a>
 	</div>
 </div>
 
