--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using MShop.WebUI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Frontends.DTO.CATALOG.CategoryDTOS
+@using Frontends.DTO.CATALOG.ProductDTOS
