--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -9,6 +9,14 @@
 					<span class="badge badge-count">5</span>
 				</a>
 			</li>
+
+			<li class="nav-item">
+				<a href="/Admin/Product/Index">
+					<i class="la la-dropbox"></i>
+					<p>Ürünler</p>
+				</a>
+			</li>
+
 		</ul>
 	</div>
 </div>
