--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -3,6 +3,14 @@
 
 		<ul class="nav">
 			<li class="nav-item">
+				<a href="/Default/Index">
+					<i class="la la-arrow-circle-o-up"></i>
+					<p>Siteye Git</p>
+					<span class="badge badge-count">5</span>
+				</a>
+			</li>
+
+			<li class="nav-item">
 				<a href="/Admin/Category/Index">
 					<i class="la la-dashboard"></i>
 					<p>Kategoriler</p>
@@ -14,6 +22,13 @@
 				<a href="/Admin/Product/Index">
 					<i class="la la-dropbox"></i>
 					<p>Ürünler</p>
+				</a>
+			</li>
+
+			<li class="nav-item">
+				<a href="/Admin/FeatureSlider/Index">
+					<i class="la la-arrows"></i>
+					<p>Ana Sayfa Slider</p>
 				</a>
 			</li>
 
