--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Frontends.DTO.CATALOG.CategoryDTOS
 @using Frontends.DTO.CATALOG.ProductDTOS
+@using Frontends.DTO.CATALOG.FeatureSliderDTOS
