--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MShop.WebUI
 @using MShop.WebUI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Frontends.DTO.CATALOG.FeatureSliderDTOS
