--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using Frontends.DTO.CATALOG.CategoryDTOS
 @using Frontends.DTO.CATALOG.ProductDTOS
 @using Frontends.DTO.CATALOG.FeatureSliderDTOS
+@using Frontends.DTO.CATALOG.SpecialOfferDTOS
