--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -32,6 +32,13 @@
 				</a>
 			</li>
 
+			<li class="nav-item">
+				<a href="/Admin/SpecialOffer/Index">
+					<i class="la la-cc-visa"></i>
+					<p>Ana Sayfa İndirim</p>
+				</a>
+			</li>
+
 		</ul>
 	</div>
 </div>
