--- a/Frontends/MShop.WebUI/Views/Shared/Components/_SpecialOfferComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_SpecialOfferComponentPartial/Default.cshtml
@@ -1,19 +1,17 @@
-﻿
+﻿@model List<ResultSpecialOfferDto>
 <div class="col-lg-4">
-    <div class="product-offer mb-30" style="height: 200px;">
-        <img class="img-fluid" src="~/UI/img/offer-1.jpg" alt="">
-        <div class="offer-text">
-            <h6 class="text-white text-uppercase">Save 20%</h6>
-            <h3 class="text-white mb-3">Special Offer</h3>
-            <a href="" class="btn btn-primary">Shop Now</a>
-        </div>
-    </div>
-    <div class="product-offer mb-30" style="height: 200px;">
-        <img class="img-fluid" src="~/UI/img/offer-2.jpg" alt="">
-        <div class="offer-text">
-            <h6 class="text-white text-uppercase">Save 20%</h6>
-            <h3 class="text-white mb-3">Special Offer</h3>
-            <a href="" class="btn btn-primary">Shop Now</a>
-        </div>
-    </div>
+
+	@foreach (var item in Model)
+	{
+
+		<div class="product-offer mb-30" style="height: 200px;">
+			<img class="img-fluid" src="@item.ImageUrl" alt="">
+			<div class="offer-text">
+				<h6 class="text-white text-uppercase">@item.Title</h6>
+				<h3 class="text-white mb-3">@item.SubTitle</h3>
+				<a href="" class="btn btn-primary">Tüm İndirimler</a>
+			</div>
+		</div>
+	}
+
 </div>
