--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using Frontends.DTO.CATALOG.FeatureSliderDTOS
+@using Frontends.DTO.CATALOG.SpecialOfferDTOS
