--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using Frontends.DTO.CATALOG.ProductDTOS
 @using Frontends.DTO.CATALOG.FeatureSliderDTOS
 @using Frontends.DTO.CATALOG.SpecialOfferDTOS
+@using Frontends.DTO.CATALOG.FeatureDTOS
