--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -6,7 +6,6 @@
 				<a href="/Default/Index">
 					<i class="la la-arrow-circle-o-up"></i>
 					<p>Siteye Git</p>
-					<span class="badge badge-count">5</span>
 				</a>
 			</li>
 
@@ -36,6 +35,13 @@
 				<a href="/Admin/SpecialOffer/Index">
 					<i class="la la-cc-visa"></i>
 					<p>Ana Sayfa İndirim</p>
+				</a>
+			</li>
+
+			<li class="nav-item">
+				<a href="/Admin/Feature/Index">
+					<i class="la la-at"></i>
+					<p>Ana Sayfa Özellikler</p>
 				</a>
 			</li>
 
