--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Feature/Index.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Feature/Index.cshtml
@@ -1,8 +1,40 @@
-﻿
+﻿@model List<ResultFeatureDto>
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
+	int count = 0;
 }
 
-<h1>Index</h1>
+<div class="card">
+	<div class="card-header">
+		<div class="card-title">Özellik İşlemleri</div>
+	</div>
+	<div class="card-body">
+		<table class="table table-head-bg-success">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Özellik Adı</th>
+					<th scope="col">Icon</th>
+					<th scope="col">Sil</th>
+					<th scope="col">Güncelle</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var item in Model)
+				{
+					count++;
+					<tr>
+						<td>@count</td>
+						<td>@item.Title</td>
+						<td>@item.Icon</td>
+						<td><a href="/Admin/Feature/DeleteFeature/@item.FeatureId" class="btn btn-danger">Sil</a></td>
+						<td><a href="/Admin/Feature/UpdateFeature/@item.FeatureId" class="btn btn-success">Güncelle</a></td>
+					</tr>
+				}
 
+			</tbody>
+		</table>
+		<a href="/Admin/Feature/CreateFeature" class="btn btn-info">Özellik Ekle</a>
+	</div>
+</div>
