--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Category/CreateCategory.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Category/CreateCategory.cshtml
@@ -17,6 +17,11 @@
 					<input type="text" class="form-control input-square" id="squareInput"  asp-for="CategoryName" placeholder="Kategori İsmi">
 				</div>
 
+				<div class="form-group">
+					<label for="squareInput">Resim Yolu</label>
+					<input type="text" class="form-control input-square" id="squareInput" asp-for="ImageUrl" placeholder="Resim Yolu">
+				</div>
+
 			</div>
 			<div class="card-action">
 				<button class="btn btn-success">Kaydet</button>
