--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Feature/Index.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Feature/Index.cshtml
@@ -8,6 +8,7 @@
 <div class="card">
 	<div class="card-header">
 		<div class="card-title">Özellik İşlemleri</div>
+		<p>Sayfa tasarımı için 4 veri kullanmanız önerilir.</p>
 	</div>
 	<div class="card-body">
 		<table class="table table-head-bg-success">
