--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 
 @using Frontends.DTO.CATALOG.FeatureSliderDTOS
 @using Frontends.DTO.CATALOG.SpecialOfferDTOS
+@using Frontends.DTO.CATALOG.FeatureDTOS
