--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -16,6 +16,7 @@
 					<th scope="col">#</th>
 					<th scope="col">Kategori Adı</th>
 					<th scope="col">Kategoriye Ait Ürünler</th>
+					<th scope="col">Resim Yolu</th>
 					<th scope="col">Sil</th>
 					<th scope="col">Güncelle</th>
 				</tr>
@@ -28,6 +29,7 @@
 						<td>@count</td>
 						<td>@item.CategoryName</td>
 						<td><a href="#" class="btn btn-warning">Ürünler</a></td>
+						<td>@item.ImageUrl</td>
 						<td><a href="/Admin/Category/DeleteCategory/@item.CategoryID" class="btn btn-danger">Sil</a></td>
 						<td><a href="/Admin/Category/UpdateCategory/@item.CategoryID" class="btn btn-success">Güncelle</a></td>
 					</tr>
