--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -45,6 +45,13 @@
 				</a>
 			</li>
 
+			<li class="nav-item">
+				<a href="/Admin/FeatureProduct/Index">
+					<i class="la la-eye"></i>
+					<p>Ana Sayfa Öne Çıkan Ürünler</p>
+				</a>
+			</li>
+
 		</ul>
 	</div>
 </div>
