--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @using Frontends.DTO.CATALOG.FeatureSliderDTOS
 @using Frontends.DTO.CATALOG.SpecialOfferDTOS
 @using Frontends.DTO.CATALOG.FeatureDTOS
+@using Frontends.DTO.CATALOG.FeatureProductDTOS
