--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @using Frontends.DTO.CATALOG.SpecialOfferDTOS
 @using Frontends.DTO.CATALOG.FeatureDTOS
 @using Frontends.DTO.CATALOG.CategoryDTOS
+@using Frontends.DTO.CATALOG.FeatureProductDTOS
