--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -7,3 +7,4 @@
 @using Frontends.DTO.CATALOG.FeatureDTOS
 @using Frontends.DTO.CATALOG.CategoryDTOS
 @using Frontends.DTO.CATALOG.FeatureProductDTOS
+@using Frontends.DTO.CATALOG.OfferDiscountDTOS
