--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -52,6 +52,13 @@
 				</a>
 			</li>
 
+			<li class="nav-item">
+				<a href="/Admin/OfferDiscount/Index">
+					<i class="la la-hand-o-down"></i>
+					<p>Ana Sayfa Özel İndirim</p>
+				</a>
+			</li>
+
 		</ul>
 	</div>
 </div>
