--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -59,6 +59,13 @@
 				</a>
 			</li>
 
+			<li class="nav-item">
+				<a href="/Admin/Brand/Index">
+					<i class="la la-diamond"></i>
+					<p>Ana Sayfa Markalar</p>
+				</a>
+			</li>
+			
 		</ul>
 	</div>
 </div>
