--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -8,3 +8,4 @@
 @using Frontends.DTO.CATALOG.FeatureDTOS
 @using Frontends.DTO.CATALOG.FeatureProductDTOS
 @using Frontends.DTO.CATALOG.OfferDiscountDTOS
+@using Frontends.DTO.CATALOG.BrandDTOS
