--- a/Frontends/MShop.WebUI/Views/Shared/Components/_VendorDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_VendorDefaultComponentPartial/Default.cshtml
@@ -1,33 +1,16 @@
-﻿
+﻿@model List<ResultBrandDto>
 <div class="container-fluid py-5">
-    <div class="row px-xl-5">
-        <div class="col">
-            <div class="owl-carousel vendor-carousel">
-                <div class="bg-light p-4">
-                    <img src="img/vendor-1.jpg" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="~/UI/img/vendor-2.jpg" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="~/UI/img/vendor-3.jpg" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="~/UI/img/vendor-4.jpg" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="~/UI/img/vendor-5.jpg" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="~/UI/img/vendor-6.jpg" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="~/UI/img/vendor-7.jpg" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="~/UI/img/vendor-8.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="row px-xl-5">
+		<div class="col">
+			<div class="owl-carousel vendor-carousel">
+				@foreach (var item in Model)
+				{
+					<div class="bg-light p-4">
+						<img src="@item.ImageUrl" alt="" style="height:80px; width:80px;">
+					</div>
+				}
+			</div>
+
+		</div>
+	</div>
 </div>
