--- a/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "ProductDetail";
-    Layout = "~/Views/UILayout/_UILayout.cshtml"; ;
+    Layout = "~/Views/UILayout/_UILayout.cshtml"; 
 }
 
 <div class="container-fluid">
