--- a/Frontends/MShop.WebUI/Views/ProductList/ProductListWithCategoryId.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/ProductListWithCategoryId.cshtml
@@ -1,7 +1,9 @@
-﻿@{
-	ViewData["Title"] = "Index";
-	Layout = "~/Views/UILayout/_UILayout.cshtml";
+﻿
+@{
+    ViewData["Title"] = "ProductListWithCategoryId";
+    Layout = "~/Views/UILayout/_UILayout.cshtml";
 }
+
 
 <div class="container-fluid">
 	<div class="row px-xl-5">
@@ -18,32 +20,39 @@
 
 <div class="container-fluid">
 	<div class="row px-xl-5">
-		
+
 		<div class="col-lg-3 col-md-4">
-			
+
 			@await Component.InvokeAsync("_ProductListPriceFilterComponentPartial")
 
-			
+
 			@await Component.InvokeAsync("_ProductListColorFilterComponentPartial")
 
-			
+
 			@await Component.InvokeAsync("_ProductListSizeFilterComponentPartial")
-		
+
 		</div>
-		
+
 		<div class="col-lg-9 col-md-8">
 			<div class="row pb-3">
 
 				@await Component.InvokeAsync("_ProductListGetProductCountComponentPartial")
 
-				@await Component.InvokeAsync("_ProductListComponentPartial")
+				@await Component.InvokeAsync("_ProductListByCategoryComponentPartial", new { id = ViewBag.Id })
 
 			
 			</div>
 			@await Component.InvokeAsync("_ProductListPaginationComponentPartial")
 		</div>
 	</div>
-	
+
 </div>
+
+
+
+
+
+
+
 
 
