--- a/Frontends/MShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -7,14 +7,16 @@
 				<i class="fa fa-angle-down text-dark"></i>
 			</a>
 			<nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
-				
+				<div class="navbar-nav w-100">
+					
+					
 					@foreach(var item in Model)
 					{
-						<a href="" class="nav-item nav-link">@item.CategoryName</a>
+						<a href="/ProductList/ProductListWithCategoryId/@item.CategoryID" class="nav-item nav-link">@item.CategoryName</a>
 					}
 					
 					
-				
+				</div>
 			</nav>
 		</div>
 		<div class="col-lg-9">
@@ -28,8 +30,8 @@
 				</button>
 				<div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
 					<div class="navbar-nav mr-auto py-0">
-						<a href="index.html" class="nav-item nav-link">Ana Sayfa</a>
-						<a href="shop.html" class="nav-item nav-link">Ürünler</a>
+						<a href="/Default/Index/" class="nav-item nav-link">Ana Sayfa</a>
+						<a href="/ProductList/Index/" class="nav-item nav-link">Ürünler</a>
 						<a href="detail.html" class="nav-item nav-link">Ürün Detayları</a>
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sayfalar <i class="fa fa-angle-down mt-1"></i></a>
