--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -9,3 +9,4 @@
 @using Frontends.DTO.CATALOG.FeatureProductDTOS
 @using Frontends.DTO.CATALOG.OfferDiscountDTOS
 @using Frontends.DTO.CATALOG.BrandDTOS
+@using Frontends.DTO.CATALOG.ProductDTOS
