--- a/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ProductDetail";
     Layout = "~/Views/UILayout/_UILayout.cshtml"; 
 }
-
+    
 <div class="container-fluid">
     <div class="row px-xl-5">
         <div class="col-12">
@@ -18,7 +18,7 @@
 
 <div class="container-fluid pb-5">
     <div class="row px-xl-5">
-        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.ProductId })
 
         @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial")
         
