--- a/Frontends/MShop.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="text-center py-4">
-                    <a class="h6 text-decoration-none text-truncate" href="">@item.Title</a>
+                    <a class="h6 text-decoration-none text-truncate" href="/ProductList/ProductDetail/@item.FeatureProductId">@item.Title</a>
                     <div class="d-flex align-items-center justify-content-center mt-2">
                         <h5>₺@item.Price</h5><h6 class="text-muted ml-2"><del>₺@offerPrice</del></h6>
                     </div>
