--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ProductListComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ProductListComponentPartial/Default.cshtml
@@ -13,7 +13,7 @@
 			</div>
 		</div>
 		<div class="text-center py-4">
-			<a class="h6 text-decoration-none text-truncate" href="">@item.ProductName</a>
+			<a class="h6 text-decoration-none text-truncate" href="/ProductList/ProductDetail/@item.ProductID">@item.ProductName</a>
 			<div class="d-flex align-items-center justify-content-center mt-2">
 				<h5>₺@item.ProductPrice</h5>
 			</div>
