--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -11,3 +11,4 @@
 @using Frontends.DTO.CATALOG.BrandDTOS
 @using Frontends.DTO.CATALOG.ProductDTOS
 @using Frontends.DTO.CATALOG.ProductImageDTOS
+@using Frontends.DTO.CATALOG.ProductDetailDTOS
