--- a/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -20,7 +20,7 @@
     <div class="row px-xl-5">
         @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.ProductId })
 
-        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial",new {id=ViewBag.ProductId})
         
     </div>
     <div class="row px-xl-5">
@@ -32,9 +32,9 @@
                     <a class="nav-item nav-link text-dark" data-toggle="tab" href="#tab-pane-3">Ürün Yorumları</a>
                 </div>
                 <div class="tab-content">
-                    @await Component.InvokeAsync("_ProductDetailDescriptionComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailDescriptionComponentPartial", new { id = ViewBag.ProductId })
 
-                    @await Component.InvokeAsync("_ProductDetailInformationComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailInformationComponentPartial", new { id = ViewBag.ProductId })
 
                     @await Component.InvokeAsync("_ProductDetailReviewComponentPartial")
                   
