--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ProductDetailFeatureComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ProductDetailFeatureComponentPartial/Default.cshtml
@@ -1,6 +1,7 @@
-﻿<div class="col-lg-7 h-auto mb-30">
+﻿@model GetProductDetailWithProductNameDto
+<div class="col-lg-7 h-auto mb-30">
     <div class="h-100 bg-light p-30">
-        <h3>Spor Ayakkabı</h3>
+        <h3>@Model.ProductName</h3>
         <div class="d-flex mb-3">
             <div class="text-primary mr-2">
                 <small class="fas fa-star"></small>
@@ -11,9 +12,9 @@
             </div>
             <small class="pt-1">(99 Reviews)</small>
         </div>
-        <h3 class="font-weight-semi-bold mb-4">$150.00</h3>
+        <h3 class="font-weight-semi-bold mb-4">₺@Model.Price</h3>
         <p class="mb-4">
-            Dinamik hale gelecek
+           @Model.Description
         </p>
         <div class="d-flex mb-3">
             <strong class="text-dark mr-3">Sizes:</strong>
