--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ProductDetailImageSliderComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ProductDetailImageSliderComponentPartial/Default.cshtml
@@ -5,16 +5,16 @@
 		<div class="carousel-inner bg-light">
 
     		<div class="carousel-item active">
-				<img class="w-100 h-100" src="@Model.Image1" alt="Image">
+				<img class="w-100 h-100" src="@Model.Image1" alt="Image" style="height:180px; width:180px;">
 			</div>
 			<div class="carousel-item">
-				<img class="w-100 h-100" src="@Model.Image2" alt="Image">
+				<img class="w-100 h-100" src="@Model.Image2" alt="Image" style="height:180px; width:180px;">
 			</div>
 			<div class="carousel-item">
-				<img class="w-100 h-100" src="@Model.Image3" alt="Image">
+				<img class="w-100 h-100" src="@Model.Image3" alt="Image" style="height:180px; width:180px;">
 			</div>
 			<div class="carousel-item">
-				<img class="w-100 h-100" src="@Model.Image4" alt="Image">
+				<img class="w-100 h-100" src="@Model.Image4" alt="Image" style="height:180px; width:180px;">
 			</div> 
 
 		</div>
