--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -12,3 +12,4 @@
 @using Frontends.DTO.CATALOG.ProductDTOS
 @using Frontends.DTO.CATALOG.ProductImageDTOS
 @using Frontends.DTO.CATALOG.ProductDetailDTOS
+@using Frontends.DTO.CATALOG.CommentDTOS
