--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -25,6 +25,13 @@
 			</li>
 
 			<li class="nav-item">
+				<a href="/Admin/Comment/Index">
+					<i class="la la-bullseye"></i>
+					<p>Yorumlar</p>
+				</a>
+			</li>
+
+			<li class="nav-item">
 				<a href="/Admin/FeatureSlider/Index">
 					<i class="la la-arrows"></i>
 					<p>Ana Sayfa Slider</p>
@@ -65,7 +72,7 @@
 					<p>Ana Sayfa Markalar</p>
 				</a>
 			</li>
-			
+
 		</ul>
 	</div>
 </div>
