--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ProductDetailReviewComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ProductDetailReviewComponentPartial/Default.cshtml
@@ -1,27 +1,42 @@
-﻿<div class="tab-pane fade" id="tab-pane-3">
+﻿@model List<ResultCommentDto>
+
+<div class="tab-pane fade" id="tab-pane-3">
     <div class="row">
+
         <div class="col-md-6">
             <h4 class="mb-4">Yorumlar</h4>
-            <div class="media mb-4">
-                <img src="~/UI/img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
-                <div class="media-body">
-                    <h6>John Doe<small> - <i>01 Jan 2045</i></small></h6>
-                    <div class="text-primary mb-2">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                        <i class="far fa-star"></i>
+            @if (Model.Count > 0)
+            {
+                @foreach (var item in Model)
+                {
+                    <div class="media mb-4">
+                        <img src="@item.ImageUrl" alt="Resim" class="img-fluid mr-3 mt-1" style="width: 45px;">
+                        <div class="media-body">
+                            <h6>@item.Name<small> - <i>@item.date.ToString("dd-MMM-yyyy")</i></small></h6>
+                            <div class="text-primary mb-2">
+                                @for (int i = 0; i < item.Point; i++)
+                                {
+                                    <i class="fas fa-star"></i>
+                                }
+                            </div>
+                            <p>@item.Comments</p>
+                        </div>
                     </div>
-                    <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum.</p>
+                }
+            }
+            else
+            {
+                <div class="alert alert-info" role="alert">
+                    Bu ürüne henüz yorum yapılmamıştır. İlk yorumu siz yapın!
                 </div>
-            </div>
+            }
         </div>
+
         <div class="col-md-6">
-            <h4 class="mb-4">Leave a review</h4>
-            <small>Your email address will not be published. Required fields are marked *</small>
+            <h4 class="mb-4">Yorum Yapın</h4>
+            <small>E-posta adresiniz yayımlanmayacaktır. Gerekli alanlar * ile işaretlenmiştir.</small>
             <div class="d-flex my-3">
-                <p class="mb-0 mr-2">Your Rating * :</p>
+                <p class="mb-0 mr-2">Puanınız * :</p>
                 <div class="text-primary">
                     <i class="far fa-star"></i>
                     <i class="far fa-star"></i>
@@ -30,21 +45,22 @@
                     <i class="far fa-star"></i>
                 </div>
             </div>
+
             <form>
                 <div class="form-group">
-                    <label for="message">Your Review *</label>
-                    <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
+                    <label for="message">Yorumunuz *</label>
+                    <textarea name="CommentDetail" id="message" cols="30" rows="5" class="form-control"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="name">Your Name *</label>
-                    <input type="text" class="form-control" id="name">
+                    <label for="name">Adınız *</label>
+                    <input name="Name" type="text" class="form-control" id="name">
                 </div>
                 <div class="form-group">
-                    <label for="email">Your Email *</label>
-                    <input type="email" class="form-control" id="email">
+                    <label for="email">E-posta Adresiniz *</label>
+                    <input name="Email" type="email" class="form-control" id="email">
                 </div>
                 <div class="form-group mb-0">
-                    <input type="submit" value="Leave Your Review" class="btn btn-primary px-3">
+                    <input type="submit" value="Yorumu Gönder" class="btn btn-primary px-3">
                 </div>
             </form>
         </div>
