--- a/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -40,8 +40,11 @@
 					@await Component.InvokeAsync("_ProductDetailInformationComponentPartial", new { id = ViewBag.ProductId })
 
 					@await Component.InvokeAsync("_ProductDetailReviewComponentPartial", new { id = ViewBag.ProductId })
+					@await Html.PartialAsync("AddComment")
 
 
+				</div>
+			</div>
 				</div>
 			</div>
 		</div>
