--- a/Frontends/MShop.WebUI/Views/ProductList/AddComment.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/AddComment.cshtml
@@ -4,7 +4,7 @@
     <small>E-posta adresiniz yayımlanmayacaktır. Gerekli alanlar * ile işaretlenmiştir.</small>
 
     <form method="post" asp-controller="ProductList" asp-action="AddComment">
-
+       <input type="hidden" asp-for="ProductId" value="@ViewBag.ProductId"/>
         <div class="form-group">
             <label for="message">Yorumunuz</label>
             <textarea id="message" cols="30" rows="5" class="form-control" asp-for="Comments" maxlength="100"></textarea>
