--- a/Frontends/MShop.WebUI/Views/ProductList/AddComment.cshtml
+++ b/Frontends/MShop.WebUI/Views/ProductList/AddComment.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CreateCommentDto
 <div class="col-md-6">
     <h4 class="mb-4">Yorum Yapın</h4>
-    <small>E-posta adresiniz yayımlanmayacaktır. Gerekli alanlar * ile işaretlenmiştir.</small>
+    <small>Görüş için gerekli alanları doldurunuz.</small>
 
     <form method="post" asp-controller="ProductList" asp-action="AddComment">
        <input type="hidden" asp-for="ProductId" value="@ViewBag.ProductId"/>
@@ -20,6 +20,6 @@
             <input type="number" class="form-control" id="name" asp-for="Point">
         </div>
 
-        <button>Gönder</button>
+        <button class="btn btn-success">Gönder</button>
     </form>
 </div>
