--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -73,6 +73,13 @@
 				</a>
 			</li>
 
+			<li class="nav-item">
+				<a href="/Admin/Contact/Index">
+					<i class="la la-commenting-o"></i>
+					<p>Gelen Mesajlar</p>
+				</a>
+			</li>
+
 		</ul>
 	</div>
 </div>
