--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -10,3 +10,4 @@
 @using Frontends.DTO.CATALOG.OfferDiscountDTOS
 @using Frontends.DTO.CATALOG.BrandDTOS
 @using Frontends.DTO.CATALOG.CommentDTOS
+@using Frontends.DTO.CATALOG.ContactDTOS
