--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -13,3 +13,4 @@
 @using Frontends.DTO.CATALOG.ProductImageDTOS
 @using Frontends.DTO.CATALOG.ProductDetailDTOS
 @using Frontends.DTO.CATALOG.CommentDTOS
+@using Frontends.DTO.CATALOG.ContactDTOS
