--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -14,3 +14,4 @@
 @using Frontends.DTO.CATALOG.ProductDetailDTOS
 @using Frontends.DTO.CATALOG.CommentDTOS
 @using Frontends.DTO.CATALOG.ContactDTOS
+@using Frontends.DTO.LOGİN
