--- a/Frontends/MShop.WebUI/Views/Register/Index.cshtml
+++ b/Frontends/MShop.WebUI/Views/Register/Index.cshtml
@@ -30,6 +30,9 @@
 					<input type="text" asp-for="Surname" id="full-name" class="input-text" placeholder="Soy İsim ">
 				</div>
 				<div class="form-row">
+					<input type="text" asp-for="UserName" id="full-name" class="input-text" placeholder="Kullanıcı Adı ">
+				</div>
+				<div class="form-row">
 					<input type="text" asp-for="Email" id="your-email" class="input-text" placeholder="Mail">
 				</div>
 				<div class="form-row">
