--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -15,3 +15,4 @@
 @using Frontends.DTO.CATALOG.CommentDTOS
 @using Frontends.DTO.CATALOG.ContactDTOS
 @using Frontends.DTO.LOGİN
+@using Frontends.DTO.BASKET
