--- a/Frontends/MShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -35,7 +35,7 @@
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sayfalar <i class="fa fa-angle-down mt-1"></i></a>
 							<div class="dropdown-menu bg-primary rounded-0 border-0 m-0">
-								<a href="cart.html" class="dropdown-item">Sepetim</a>
+								<a href="/ShoppingCard/Index" class="dropdown-item">Sepetim</a>
 								<a href="checkout.html" class="dropdown-item">Ödeme</a>
 							</div>
 						</div>
@@ -46,7 +46,7 @@
 							<i class="fas fa-heart text-primary"></i>
 							<span class="badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
 						</a>
-						<a href="" class="btn px-0 ml-3">
+						<a href="/ShoppingCard/Index" class="btn px-0 ml-3">
 							<i class="fas fa-shopping-cart text-primary"></i>
 							<span class="badge text-secondary border border-secondary rounded-circle" style="padding-bottom: 2px;">0</span>
 						</a>
