--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
@@ -1,59 +1,50 @@
-﻿
+﻿@model List<BasketTotalDto>
 <div class="col-lg-8 table-responsive mb-5">
-    <table class="table table-light table-borderless table-hover text-center mb-0">
-        <thead class="thead-dark">
-            <tr>
-                <th>Ürün</th>
-                <th>Fiyat</th>
-                <th>Miktar</th>
-                <th>Toplam</th>
-                <th>Kaldır</th>
-            </tr>
-        </thead>
-        <tbody class="align-middle">
-            <tr>
-                <td class="align-middle"><img src="~/UI/img/product-1.jpg" alt="" style="width: 50px;"> Ürün İsmi</td>
-                <td class="align-middle">$150</td>
-                <td class="align-middle">
-                    <div class="input-group quantity mx-auto" style="width: 100px;">
-                        <div class="input-group-btn">
-                            <button class="btn btn-sm btn-primary btn-minus">
-                                <i class="fa fa-minus"></i>
-                            </button>
-                        </div>
-                        <input type="text" class="form-control form-control-sm bg-secondary border-0 text-center" value="1">
-                        <div class="input-group-btn">
-                            <button class="btn btn-sm btn-primary btn-plus">
-                                <i class="fa fa-plus"></i>
-                            </button>
-                        </div>
-                    </div>
-                </td>
-                <td class="align-middle">$150</td>
-                <td class="align-middle"><button class="btn btn-sm btn-danger"><i class="fa fa-times"></i></button></td>
-            </tr>
-            <tr>
-                <td class="align-middle"><img src="~/UI/img/product-2.jpg" alt="" style="width: 50px;"> Ürün İsmi</td>
-                <td class="align-middle">$150</td>
-                <td class="align-middle">
-                    <div class="input-group quantity mx-auto" style="width: 100px;">
-                        <div class="input-group-btn">
-                            <button class="btn btn-sm btn-primary btn-minus">
-                                <i class="fa fa-minus"></i>
-                            </button>
-                        </div>
-                        <input type="text" class="form-control form-control-sm bg-secondary border-0 text-center" value="1">
-                        <div class="input-group-btn">
-                            <button class="btn btn-sm btn-primary btn-plus">
-                                <i class="fa fa-plus"></i>
-                            </button>
-                        </div>
-                    </div>
-                </td>
-                <td class="align-middle">$150</td>
-                <td class="align-middle"><button class="btn btn-sm btn-danger"><i class="fa fa-times"></i></button></td>
-            </tr>
+	<table class="table table-light table-borderless table-hover text-center mb-0">
+		<thead class="thead-dark">
+			<tr>
+				<th>Ürün</th>
+				<th>Fiyat</th>
+				<th>Miktar</th>
+				<th>Toplam</th>
+				<th>Kaldır</th>
+			</tr>
+		</thead>
+		<tbody class="align-middle">
+			@if (Model != null)
+			{
+				@foreach (var item in Model)
+				{
+					<tr>
+						<td class="align-middle"><img src="~/UI/img/product-1.jpg" alt="" style="width: 50px;"> @item.BasketItems.Select(x => x.ProductName).FirstOrDefault()</td>
+						<td class="align-middle">@item.BasketItems.Select(x => x.Price).FirstOrDefault()</td>
+						<td class="align-middle">
+							<div class="input-group quantity mx-auto" style="width: 100px;">
+								<div class="input-group-btn">
+									<button class="btn btn-sm btn-primary btn-minus">
+										<i class="fa fa-minus"></i>
+									</button>
+								</div>
+								<input type="text" class="form-control form-control-sm bg-secondary border-0 text-center" value="1">
+								<div class="input-group-btn">
+									<button class="btn btn-sm btn-primary btn-plus">
+										<i class="fa fa-plus"></i>
+									</button>
+								</div>
+							</div>
+						</td>
+						<td class="align-middle">@item.TotalPrice</td>
+						<td class="align-middle"><button class="btn btn-sm btn-danger"><i class="fa fa-times"></i></button></td>
+					</tr>
+				}
 
-        </tbody>
-    </table>
+			}
+			else
+			{
+			<td><p>Sepetiniz Boş</p></td>
+			}
+
+
+		</tbody>
+	</table>
 </div>
