--- a/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
+++ b/Frontends/MShop.WebUI/Views/Shared/Components/_ShoppingCardListComponentPartial/Default.cshtml
@@ -34,7 +34,7 @@
 							</div>
 						</td>
 						<td class="align-middle">@item.Quantity</td>
-						<td class="align-middle"><a href="/ShoppingCard/RemoveBasket/@item.ProductId" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a></td>
+						<td class="align-middle"><a href="/ShoppingCard/RemoveBasket" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a></td>
 					</tr>
 				}
 
