--- a/Frontends/MShop.WebUI/Views/Discount/_ConfirmCouponCode.cshtml
+++ b/Frontends/MShop.WebUI/Views/Discount/_ConfirmCouponCode.cshtml
@@ -28,7 +28,7 @@
                 <h5>Toplam Tutar</h5>
                 <h5>$@ViewBag.TotalPrice</h5>
             </div>
-            <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Ödemeyi Tamamla</button>
+            <a href ="/Payment/Index" class="btn btn-block btn-primary font-weight-bold my-3 py-3">Ödemeyi Tamamla</a>
         </div>
     </div>
 </div>
