--- a/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Views/_ViewImports.cshtml
@@ -16,4 +16,7 @@
 @using Frontends.DTO.CATALOG.ContactDTOS
 @using Frontends.DTO.LOGİN
 @using Frontends.DTO.BASKET
-@using Frontends.DTO.ORDER
+@using Frontends.DTO.ORDER.Ordering
+@using Frontends.DTO.ORDER.Adderess
+@using Frontends.DTO.ORDER.OrderDetail
+
