--- a/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -11,3 +11,4 @@
 @using Frontends.DTO.CATALOG.BrandDTOS
 @using Frontends.DTO.CATALOG.CommentDTOS
 @using Frontends.DTO.CATALOG.ContactDTOS
+@using Frontends.DTO.MESSAGE
