--- a/Frontends/MShop.WebUI/Areas/Admin/Views/Message/InBox.cshtml
+++ b/Frontends/MShop.WebUI/Areas/Admin/Views/Message/InBox.cshtml
@@ -1,8 +1,56 @@
-﻿
+﻿@model List<GetMessageByUserId>
 @{
     ViewData["Title"] = "InBox";
     Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
+	int count = 0;
 }
 
-<h1>Gelen Mesajlar</h1>
+<div class="card">
+	<div class="card-header">
+		<div class="card-title">Kategori İşlemleri</div>
+	</div>
+	<div class="card-body">
+		<table class="table table-head-bg-success">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Ürün Adı</th>
+					<th scope="col">Kategori Adı</th>
+					<th scope="col">Fiyatı</th>
+					<th scope="col">Yorumlar</th>
+					<th scope="col">Detaylar</th>
+					<th scope="col">Sil</th>
+					<th scope="col">Güncelle</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var item in Model)
+				{
+					count++;
+					<tr>
+						<td>@count</td>
+						<td>@item.SenderId</td>
+						<td>@item.Subject</td>
+						<td>@item.SendedDate</td>
+						<td>@item.IsReaded</td>
+						@if (item.Messages.Length >= 25)
+						{
+							<td>@item.Messages.Substring(0, 25) ...</td>
+						}
+						else
+						{
+							<td>@item.Messages</td>
+						}
+						<td><a href="/Admin/Message/MessageDetail/@item.UserMessageId" class="btn btn-primary">Mesaj Detayı..</a></td>
+						<td><a href="/Admin/Message/DeleteMessage/@item.UserMessageId" class="btn btn-danger">Sil</a></td>
+					
+					</tr>
+				}
+
+			</tbody>
+		</table>
+		<a href="/Admin/Message/SendMessage" class="btn btn-info">Mesaj Gönder</a>
+	</div>
+</div>
+
 
